# matchbox-keyboard

./: Makefile.am  configure.ac
applet/: applet.c
gtk-im/: Makefile.am  im-context.c  im-protocol.c
src/: config-parser.c  matchbox-keyboard-ui.c
